--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ remote_theme: mmistakes/so-simple-theme
 locale: en-US
 title: "So Simple"
 description: "A simple Jekyll theme for words and pictures."
-baseurl: "/so-simple-theme"
-url: "https://mmistakes.github.io"
+baseurl: "/"
+url: "https://ultralegendz.github.io/x"
 logo: "/images/so-simple-site-logo.png"
 date_format: "%B %-d, %Y"
 read_time: true
